tried to turnoff tracking of nohup

--- a/hash_domain_segment/ipynbs/scratch.ipynb
+++ b/hash_domain_segment/ipynbs/scratch.ipynb
@@ -132,6 +132,7 @@
      "collapsed": false,
      "input": [
       "cleaned = 'hashie33$$buddies'\n",
+      "cleaned = \"\"\"'that'sit\"\"\"\n",
       "validchars = 'abcdefghijklmnopqrstuvwxyz0123456789'\n",
       "''.join(char for char in cleaned if char in validchars)"
      ],
@@ -141,13 +142,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 27,
+       "prompt_number": 30,
        "text": [
-        "'hashie33buddies'"
+        "'thatsit'"
        ]
       }
      ],
-     "prompt_number": 27
+     "prompt_number": 30
     },
     {
      "cell_type": "code",
@@ -164,8 +165,229 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "cle"
+      "words_file = '../words.txt'\n"
      ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "nohup.out     scratch.ipynb\r\n"
+       ]
+      }
+     ],
+     "prompt_number": 32
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "corpusfile = '../words.txt'\n",
+      "global corpus\n",
+      "corpus = open(corpusfile,'r').read().split()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 11
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "words = 'thewords'\n",
+      "remain = ''"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 14
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "words[:-1] "
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 18,
+       "text": [
+        "False"
+       ]
+      }
+     ],
+     "prompt_number": 18
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "words[-1]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 17,
+       "text": [
+        "'s'"
+       ]
+      }
+     ],
+     "prompt_number": 17
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "'is' in corpus"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 20,
+       "text": [
+        "False"
+       ]
+      }
+     ],
+     "prompt_number": 20
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "\"\"\" Weird... the corpus doesn't contain the word 'is' :(\"\"\""
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 21,
+       "text": [
+        "\" Weird... the corpus doesn't contain the word 'is' :(\""
+       ]
+      }
+     ],
+     "prompt_number": 21
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "ex1 = '23go'\n",
+      "ex2 = 'go'\n",
+      "ex3 = '23'\n",
+      "word = ex1"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 23
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "cand = word[1]\n",
+      "while cand+"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "'3'.isnum()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "ename": "AttributeError",
+       "evalue": "'str' object has no attribute 'isnum'",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+        "\u001b[0;32m<ipython-input-26-eb271d5af3c9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;34m'3'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misnum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'isnum'"
+       ]
+      }
+     ],
+     "prompt_number": 26
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "char = '2323r32'\n",
+      "remain = char + 'blahblah'"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 27
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "remain[len(char):]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 32,
+       "text": [
+        "'blahblah'"
+       ]
+      }
+     ],
+     "prompt_number": 32
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "'hot' in corpus"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 36,
+       "text": [
+        "True"
+       ]
+      }
+     ],
+     "prompt_number": 36
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
