improving the clean function and making more modular

--- a/hash_domain_segment/ipynbs/scratch.ipynb
+++ b/hash_domain_segment/ipynbs/scratch.ipynb
@@ -387,6 +387,133 @@
     {
      "cell_type": "code",
      "collapsed": false,
+     "input": [
+      "urls = ['thebeandme.com',\n",
+      "      'www.facebook.co.uk',\n",
+      "      'http://different02.sfgov.org/',\n",
+      "      'https://sidekind.com/substack/stream-adventure',\n",
+      "      'http://issueschool.io/',\n",
+      "      'https://www.bedroom.com/']\n",
+      "\n",
+      "urlcleansols = ['thebeandme',\n",
+      "             'facebook',\n",
+      "             'different02',\n",
+      "             'sidekind',\n",
+      "             'issueschool',\n",
+      "             'bedroom']\n",
+      "\n",
+      "urlsols = ['the be and me',\n",
+      "           'face book',\n",
+      "           'different 02',\n",
+      "           'side kind',\n",
+      "           'issue school',\n",
+      "           'bedroom']\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 2
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "clean( urls[0])"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 9,
+       "text": [
+        "'thebeandmecom'"
+       ]
+      }
+     ],
+     "prompt_number": 9
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def clean( urlhash ) :\n",
+      "    # returns urlhash without url decorations, hashtags, lowercase, and so just numbers and letters\n",
+      "    cleaned = urlhash.lower()\n",
+      "    \n",
+      "    # if hashtag\n",
+      "    if cleaned[0] == '#' :\n",
+      "        cleaned = cleaned[1:]\n",
+      "    \n",
+      "    # if website url\n",
+      "    elif cleaned[:3] == 'www' :\n",
+      "        firstdot = cleaned.find('.')\n",
+      "        seconddot = cleaned.find('.',firstdot+1)\n",
+      "        cleaned = cleaned[firstdot+1 : seconddot]\n",
+      "    \n",
+      "    # outside cases we consider\n",
+      "    else :\n",
+      "        'neither?!'\n",
+      "    # for any lingering non-alphanumeric characters\n",
+      "    validchars = 'abcdefghijklmnopqrstuvwxyz0123456789'\n",
+      "    cleaned = ''.join(char for char in cleaned if char in validchars)\n",
+      "    \n",
+      "    return cleaned"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 8
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "for i in range(len(urls)) :\n",
+      "    print '{:<50} {:<30}'.format(clean(urls[i]),urlcleansols[i])"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "thebeandmecom                                      thebeandme                    \n",
+        "facebook                                           facebook                      \n",
+        "httpdifferent02sfgovorg                            different02                   \n",
+        "httpssidekindcomsubstackstreamadventure            sidekind                      \n",
+        "httpissueschoolio                                  issueschool                   \n",
+        "httpswwwbedroomcom                                 bedroom                       \n"
+       ]
+      }
+     ],
+     "prompt_number": 11
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "len('https://')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 12,
+       "text": [
+        "8"
+       ]
+      }
+     ],
+     "prompt_number": 12
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
      "input": [],
      "language": "python",
      "metadata": {},
