refactored clean() function into smaller ones

--- a/hash_domain_segment/ipynbs/scratch.ipynb
+++ b/hash_domain_segment/ipynbs/scratch.ipynb
@@ -438,33 +438,56 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "def dropUrlPrefix(url) :\n",
+      "\t\"\"\"\n",
+      "\tRequires :\n",
+      "\tReturns : returns url without prefix '<http<s>://><www.>'  \n",
+      "\t\"\"\"\n",
+      "\tif url[:8] == 'https://' :\n",
+      "\t\turl = url[8:]\n",
+      "\telif url[:7] == 'http://' :\n",
+      "\t\turl = url[7:]\n",
+      "\tif url[:4] == 'www.' :\n",
+      "\t\turl = url[4:]\n",
+      "\treturn url\n",
+      "\n",
+      "def dropUrlSuffix(url) :\n",
+      "\t\"\"\"\n",
+      "\tRequires : first '.' in url marks the suffix start (i.e. no 'www.' prefix)\n",
+      "\tReturns : url without any suffixes like '.com', '.co.uk',...\n",
+      "\t\"\"\"\n",
+      "\tnextdot = url.find('.')\n",
+      "\turl = url[:nextdot]\n",
+      "\treturn url\n",
+      "\n",
+      "\n",
       "def clean( urlhash ) :\n",
-      "    # returns urlhash without url decorations, hashtags, lowercase, and so just numbers and letters\n",
-      "    cleaned = urlhash.lower()\n",
-      "    \n",
-      "    # if hashtag\n",
-      "    if cleaned[0] == '#' :\n",
-      "        cleaned = cleaned[1:]\n",
-      "    \n",
-      "    # if website url\n",
-      "    elif cleaned[:3] == 'www' :\n",
-      "        firstdot = cleaned.find('.')\n",
-      "        seconddot = cleaned.find('.',firstdot+1)\n",
-      "        cleaned = cleaned[firstdot+1 : seconddot]\n",
-      "    \n",
-      "    # outside cases we consider\n",
-      "    else :\n",
-      "        'neither?!'\n",
-      "    # for any lingering non-alphanumeric characters\n",
-      "    validchars = 'abcdefghijklmnopqrstuvwxyz0123456789'\n",
-      "    cleaned = ''.join(char for char in cleaned if char in validchars)\n",
-      "    \n",
-      "    return cleaned"
+      "\t# returns urlhash without url decorations, hashtags, lowercase, and so just numbers and letters\n",
+      "\tcleaned = urlhash.lower()\n",
+      "\t\n",
+      "\t# if hashtag\n",
+      "\tif cleaned[0] == '#' :\n",
+      "\t\tcleaned = cleaned[1:]\n",
+      "\n",
+      "\t#check if url\n",
+      "\telif '.' in cleaned :\n",
+      "\t\tcleaned = dropUrlPrefix(cleaned)\n",
+      "\t\tcleaned = dropUrlSuffix(cleaned)\n",
+      "\n",
+      "\n",
+      "\t# outside cases we consider\n",
+      "\telse :\n",
+      "\t\t'neither?!'\n",
+      "\t# for any lingering non-alphanumeric characters\n",
+      "\tvalidchars = 'abcdefghijklmnopqrstuvwxyz0123456789'\n",
+      "\tcleaned = ''.join(char for char in cleaned if char in validchars)\n",
+      "\n",
+      "\treturn cleaned"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 8
+     "prompt_number": 16
     },
     {
      "cell_type": "code",
@@ -480,16 +503,16 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "thebeandmecom                                      thebeandme                    \n",
+        "thebeandme                                         thebeandme                    \n",
         "facebook                                           facebook                      \n",
-        "httpdifferent02sfgovorg                            different02                   \n",
-        "httpssidekindcomsubstackstreamadventure            sidekind                      \n",
-        "httpissueschoolio                                  issueschool                   \n",
-        "httpswwwbedroomcom                                 bedroom                       \n"
+        "different02                                        different02                   \n",
+        "sidekind                                           sidekind                      \n",
+        "issueschool                                        issueschool                   \n",
+        "bedroom                                            bedroom                       \n"
        ]
       }
      ],
-     "prompt_number": 11
+     "prompt_number": 17
     },
     {
      "cell_type": "code",
