no changes since last

--- a/hash_domain_segment/ipynbs/scratch.ipynb
+++ b/hash_domain_segment/ipynbs/scratch.ipynb
@@ -440,20 +440,20 @@
      "input": [
       "def dropUrlPrefix(url) :\n",
       "\t\"\"\"\n",
-      "\tRequires :\n",
+      "\tRequires : \n",
       "\tReturns : returns url without prefix '<http<s>://><www.>'  \n",
       "\t\"\"\"\n",
-      "\tif url[:8] == 'https://' :\n",
+      "\tif len(url) >= 8 and url[:8] == 'https://' :\n",
       "\t\turl = url[8:]\n",
-      "\telif url[:7] == 'http://' :\n",
+      "\telif len(url) >= 7 and url[:7] == 'http://' :\n",
       "\t\turl = url[7:]\n",
-      "\tif url[:4] == 'www.' :\n",
+      "\tif len(url) >= 4 and url[:4] == 'www.' :\n",
       "\t\turl = url[4:]\n",
       "\treturn url\n",
       "\n",
       "def dropUrlSuffix(url) :\n",
       "\t\"\"\"\n",
-      "\tRequires : first '.' in url marks the suffix start (i.e. no 'www.' prefix)\n",
+      "\tRequires : '.' in url \n",
       "\tReturns : url without any suffixes like '.com', '.co.uk',...\n",
       "\t\"\"\"\n",
       "\tnextdot = url.find('.')\n",
@@ -462,7 +462,10 @@
       "\n",
       "\n",
       "def clean( urlhash ) :\n",
-      "\t# returns urlhash without url decorations, hashtags, lowercase, and so just numbers and letters\n",
+      "\t\"\"\"\n",
+      "\tRequires : urlhash at least one characters\n",
+      "\tReturns : urlhash without hashtag or url decorations (just concatenated lowercase letters and numbers)\n",
+      "\t\"\"\"\n",
       "\tcleaned = urlhash.lower()\n",
       "\t\n",
       "\t# if hashtag\n",
@@ -473,21 +476,19 @@
       "\telif '.' in cleaned :\n",
       "\t\tcleaned = dropUrlPrefix(cleaned)\n",
       "\t\tcleaned = dropUrlSuffix(cleaned)\n",
-      "\n",
-      "\n",
+      "\t\n",
       "\t# outside cases we consider\n",
       "\telse :\n",
       "\t\t'neither?!'\n",
       "\t# for any lingering non-alphanumeric characters\n",
       "\tvalidchars = 'abcdefghijklmnopqrstuvwxyz0123456789'\n",
       "\tcleaned = ''.join(char for char in cleaned if char in validchars)\n",
-      "\n",
       "\treturn cleaned"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 16
+     "prompt_number": 18
     },
     {
      "cell_type": "code",
@@ -512,7 +513,7 @@
        ]
       }
      ],
-     "prompt_number": 17
+     "prompt_number": 19
     },
     {
      "cell_type": "code",
