beginning the depth first search implementation of tokenizing

--- a/hash_domain_segment/ipynbs/scratch.ipynb
+++ b/hash_domain_segment/ipynbs/scratch.ipynb
@@ -536,6 +536,14 @@
      "prompt_number": 12
     },
     {
+     "cell_type": "heading",
+     "level": 4,
+     "metadata": {},
+     "source": [
+      "now for the depth first segment"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [],
