--- a/hash_domain_segment/ipynbs/scratch.ipynb
+++ b/hash_domain_segment/ipynbs/scratch.ipynb
@@ -756,13 +756,14 @@
       "\tif longest[0].isdigit() :\n",
       "\t\tfor ind, char in enumerate(longest) :\n",
       "\t\t\tif not char.isdigit():\n",
-      "\t\t\t\tlongest = longest[:ind]\n",
-      "\t\t\t\tprint longest\n",
-      "\t\t\t\tbreak\n",
+      "\t\t\t\tlongest = longest[:ind]\t\n",
+      "\t\t\t\tbreak\t\t\t\n",
+      "\t\treturn longest\n",
+      "\n",
       "\n",
       "\t#handle the word case\n",
       "\twhile True:\n",
-      "\t\tif longest in corpus or longest == '':\n",
+      "\t\tif longest in corpus or longest == '' :\n",
       "\t\t\tbreak\n",
       "\t\tlongest = longest[:-1]\n",
       "\n",
@@ -824,7 +825,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 67
+     "prompt_number": 74
     },
     {
      "cell_type": "code",
@@ -849,7 +850,7 @@
        ]
       }
      ],
-     "prompt_number": 68
+     "prompt_number": 75
     },
     {
      "cell_type": "code",
@@ -867,14 +868,14 @@
        "text": [
         "the be and me                                      the be and me                 \n",
         "face book                                          face book                     \n",
-        "FAILURE TO TOKENIZE different02                    different 02                  \n",
+        "different 02                                       different 02                  \n",
         "side kind                                          side kind                     \n",
         "issue school                                       issue school                  \n",
         "bedroom                                            bedroom                       \n"
        ]
       }
      ],
-     "prompt_number": 69
+     "prompt_number": 76
     },
     {
      "cell_type": "code",
@@ -888,13 +889,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 73,
+       "prompt_number": 77,
        "text": [
-        "'FAILURE TO TOKENIZE facebook34'"
+        "'face book 34'"
        ]
       }
      ],
-     "prompt_number": 73
+     "prompt_number": 77
     },
     {
      "cell_type": "code",
