basic structure of which_apple script laid out

--- a/apple_disambiguation/ipynbs/scratch.ipynb
+++ b/apple_disambiguation/ipynbs/scratch.ipynb
@@ -363,11 +363,11 @@
       "\n",
       "for index, word in enumerate(words) :\n",
       "    #Apple?\n",
-      "    if word[:5].lower() ==\n",
+      "    if word[:5].lower() == 'apple' \n",
       "    \n",
-      "    #Capital?\n",
-      "    #Plural?\n",
-      "    #End of sentence?"
+      "        #Capital?\n",
+      "        #Plural?\n",
+      "        #End of sentence?"
      ],
      "language": "python",
      "metadata": {},
